add invite links

--- a/index.html
+++ b/index.html
@@ -694,10 +694,10 @@
 							<div class="footer-widget">
 								<h3>Support</h3>
 								<ul class="links">
-									<li> <a href="jvascript:void(0)"><i class="lni lni-discord"></i> Discord</a> </li>
-									<li> <a href="jvascript:void(0)"><i class="lni lni-telegram-original"></i> Telegram</a> </li>
+									<li> <a href="https://discord.gg/mBuHrqWF6D"><i class="lni lni-discord"></i> Discord</a> </li>
+									<li> <a href="https://t.me/joinchat/yL_38mTQ8kg4OGZi"><i class="lni lni-telegram-original"></i> Telegram</a> </li>
 									<li> <a href="jvascript:void(0)"><i class="lni lni-atlassian"></i> Jira</a> </li>
-									<li> <a href="jvascript:void(0)"><i class="lni lni-headphone-alt"></i> Voice </a> </li>
+									<li> <a href="tel:+41797646758">+41 79 7646758</a><i class="lni lni-headphone-alt"></i> Telephone </a> </li>
 								</ul>
 							</div>
 						</div>
