--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
 									<li> <a href="https://discord.gg/mBuHrqWF6D"><i class="lni lni-discord"></i> Discord</a> </li>
 									<li> <a href="https://t.me/joinchat/yL_38mTQ8kg4OGZi"><i class="lni lni-telegram-original"></i> Telegram</a> </li>
 									<li> <a href="jvascript:void(0)"><i class="lni lni-atlassian"></i> Jira</a> </li>
-									<li> <a href="tel:+41797646758"></a><i class="lni lni-headphone-alt"></i> Telephone </a> </li>
+									<li> <a href="tel:+41797646758"><i class="lni lni-headphone-alt"></i> Telephone </a> </li>
 								</ul>
 							</div>
 						</div>
